--- a/cm-mlops/script/build-mlperf-inference-server-nvidia/_cm.yaml
+++ b/cm-mlops/script/build-mlperf-inference-server-nvidia/_cm.yaml
@@ -189,21 +189,21 @@ versions:
       nvidia-inference-common-code:
         version: r2.1
       nvidia-scratch-space:
-        tags: version.2_1
+        tags: _version.2_1
 
   r3.0:
     add_deps_recursive:
       nvidia-inference-common-code:
         version: r3.0
       nvidia-scratch-space:
-        tags: version.3_0
+        tags: _version.3_0
 
   r3.1:
     add_deps_recursive:
       nvidia-inference-common-code:
         version: r3.1
       nvidia-scratch-space:
-        tags: version.3_1
+        tags: _version.3_1
     deps:
       - tags: install,nccl,libs,_cuda
       - tags: install,pytorch,from.src,_for-nvidia-mlperf-inference-v3.1-gptj
