--- a/cm-mlops/script/reproduce-mlperf-inference-nvidia/_cm.yaml
+++ b/cm-mlops/script/reproduce-mlperf-inference-nvidia/_cm.yaml
@@ -457,7 +457,7 @@ variations:
       CM_MODEL_BATCH_SIZE: "#"
       CM_MLPERF_NVIDIA_HARNESS_GPU_BATCH_SIZE: "#"
       #CM_MLPERF_SUT_NAME_RUN_CONFIG_SUFFIX1: "gpu_batch_size.#"
-    ad:
+    adr:
       build-engine:
         tags: _batch_size.#
 
@@ -466,7 +466,7 @@ variations:
     env:
       CM_MLPERF_NVIDIA_HARNESS_DLA_BATCH_SIZE: "#"
       CM_MLPERF_SUT_NAME_RUN_CONFIG_SUFFIX2: "dla_batch_size.#"
-    ad:
+    adr:
       build-engine:
         tags: _dla_batch_size.#
 
