Support shm size for docker
Former-commit-id: 12f2436aa2490b1ec5b7399a160b96e3722df3ca

--- a/cm-mlops/script/build-mlperf-inference-server-nvidia/_cm.yaml
+++ b/cm-mlops/script/build-mlperf-inference-server-nvidia/_cm.yaml
@@ -213,6 +213,7 @@ versions:
 docker:
   skip_run_cmd: 'no'
   all_gpus: 'yes'
+  shm_size: '32gb'
   docker_os: ubuntu
   docker_real_run: False
   interactive: True
