fixing GUI to support latest StreamLit
Former-commit-id: 8c3002e981c53efb8af692512407053ec62f7f00

--- a/cm-mlops/script/launch-benchmark/_cm.yaml
+++ b/cm-mlops/script/launch-benchmark/_cm.yaml
@@ -11,5 +11,5 @@ tags:
 category: "Collective benchmarking"
 
 gui:
-  title: "Collective benchmarking"
+  title: "Launch benchmark"
   use_customize_func: "gui"
