--- a/cm-mlops/script/create-patch/_cm.yaml
+++ b/cm-mlops/script/create-patch/_cm.yaml
@@ -1,6 +1,8 @@
 uid: 0659dc1f75664c65
 alias: create-patch
 
+category: "DevOps automation"
+
 automation_alias: script
 automation_uid: 5b4e0237da074764
 
