--- a/cm-mlops/script/get-dataset-openimages-calibration/_cm.yaml
+++ b/cm-mlops/script/get-dataset-openimages-calibration/_cm.yaml
@@ -6,6 +6,8 @@ automation_uid: 5b4e0237da074764
 
 cache: true
 
+category: "AI/ML datasets"
+
 deps:
   - tags: download,file
     force_cache: true
