Change MLC rclone endpoints
Former-commit-id: dba9a7b9e5c7b77e1a8588ac78cde2504f69e865

--- a/cm-mlops/script/build-mlperf-inference-server-nvidia/_cm.yaml
+++ b/cm-mlops/script/build-mlperf-inference-server-nvidia/_cm.yaml
@@ -214,7 +214,7 @@ docker:
   skip_run_cmd: 'no'
   all_gpus: 'yes'
   shm_size: '32gb'
-  extra_run_args: ' --ulimit memlock=-1 --cap-add SYS_ADMIN --cap-add SYS_TIME'
+  extra_run_args: ' --runtime=nvidia --ulimit memlock=-1 --cap-add SYS_ADMIN --cap-add SYS_TIME --security-opt apparmor=unconfined --security-opt seccomp=unconfined'
   docker_os: ubuntu
   docker_real_run: False
   interactive: True
