--- a/cm-mlops/cfg/benchmark-run-mlperf-client-dev/retinanet-reference-python-onnx-windows.yaml
+++ b/cm-mlops/cfg/benchmark-run-mlperf-client-dev/retinanet-reference-python-onnx-windows.yaml
@@ -1,6 +1,6 @@
 uid: "fe379ecd1e054a00"
 
-name: "RetinaNet Reference Python ONNX Offline"
+name: "RetinaNet Reference Python ONNX Offline (Windows)"
 
 supported_compute:
 - cdfd424c32734e38
