Fixes for nvidia-mlperf-inference-dlrmv2
Former-commit-id: bd447cd6a6516e944ca589600d3bea0c769aedf4

--- a/cm-mlops/script/reproduce-mlperf-inference-nvidia/_cm.yaml
+++ b/cm-mlops/script/reproduce-mlperf-inference-nvidia/_cm.yaml
@@ -162,6 +162,9 @@ deps:
       CM_MODEL:
       - dlrm-v2-99
       - dlrm-v2-99.9
+    skip_if_env:
+      DLRM_DATA_PATH:
+      - on
     names:
       - criteo-preprocessed
     tags: get,dataset,preprocessed,criteo
@@ -172,6 +175,9 @@ deps:
       CM_MODEL:
       - dlrm-v2-99
       - dlrm-v2-99.9
+    skip_if_env:
+      DLRM_DATA_PATH:
+      - on
     names:
       - dlrm-model
     tags: get,ml-model,dlrm,_pytorch
@@ -403,8 +409,11 @@ variations:
     deps:
     - tags: get,generic-python-lib,_torch
     - tags: get,generic-python-lib,_package.torchsnapshot
+    - tags: get,generic-python-lib,_package.torchrec
+      version: 0.3.2
     - tags: get,generic-python-lib,_package.fbgemm-gpu
-      version: 0.2.0
+      version: 0.3.2
+    - tags: get,generic-python-lib,_onnx-graphsurgeon
 
   dlrm-v2-99:
     group: model
@@ -626,7 +635,8 @@ variations:
           - build-engine-options
         skip_if_env:
           CM_MODEL:
-            dlrm-v2-99
+            - dlrm-v2-99
+            - dlrm-v2-99.9
 
       - tags: reproduce,mlperf,inference,nvidia,harness,_download_model
         inherit_variation_tags: true
@@ -729,7 +739,8 @@ variations:
         force_cache: true
         skip_if_env:
           CM_MODEL:
-            dlrm-v2-99
+           - dlrm-v2-99
+           - dlrm-v2-99.9
       - tags: reproduce,mlperf,inference,nvidia,harness,_download_model
         inherit_variation_tags: true
         skip_inherit_variation_groups:
