Support variation meta for cm docker script
Former-commit-id: d0dbf7bf2e3af16cd87e9356be8401c146a0b62d

--- a/cm-mlops/script/app-mlperf-inference/_cm.yaml
+++ b/cm-mlops/script/app-mlperf-inference/_cm.yaml
@@ -801,6 +801,8 @@ variations:
       mlperf-inference-implementation:
         tags: _cpu
   cuda:
+    docker:
+      all_gpus: 'yes'
     group:
       device
     env:
@@ -810,6 +812,8 @@ variations:
       mlperf-inference-implementation:
         tags: _cuda
   rocm:
+    docker:
+      all_gpus: 'yes'
     group:
       device
     env:
