--- a/cm-mlops/cfg/benchmark-run-mlperf-inference-latest/_cm.yaml
+++ b/cm-mlops/cfg/benchmark-run-mlperf-inference-latest/_cm.yaml
@@ -16,3 +16,11 @@ name: "MLPerf inference - latest"
 supported_compute:
 - 357a972e79614903
 - cdfd424c32734e38
+
+urls:
+- name: "Official page"
+  url: "https://mlcommons.org/working-groups/benchmarks/inference"
+- name: "GitHub dev page"
+  url: "https://github.com/mlcommons/inference"
+- name: "MLCommons CM automation (under development)"
+  url: "https://github.com/mlcommons/ck/tree/master/docs/mlperf/inference"
