--- a/cm-mlops/script/build-mlperf-inference-server-nvidia/_cm.yaml
+++ b/cm-mlops/script/build-mlperf-inference-server-nvidia/_cm.yaml
@@ -229,7 +229,7 @@ docker:
     cudnn_tar_file_path: CM_CUDNN_TAR_FILE_PATH
     tensorrt_tar_file_path: CM_TENSORRT_TAR_FILE_PATH
     cuda_run_file_path: CUDA_RUN_FILE_LOCAL_PATH
-    dlrm_DATA_path: DLRM_DATA_PATH
+    dlrm_data_path: DLRM_DATA_PATH
     scratch_path: MLPERF_SCRATCH_PATH
   deps:
     - tags: get,mlperf,inference,nvidia,scratch,space
