Added scikit-learn deps for dlrm accuracy check
Former-commit-id: d7b53062b931956bcb233d3bdeaf405809bbf84d

--- a/cm-mlops/script/reproduce-mlperf-inference-nvidia/_cm.yaml
+++ b/cm-mlops/script/reproduce-mlperf-inference-nvidia/_cm.yaml
@@ -415,6 +415,7 @@ variations:
     - tags: get,generic-python-lib,_package.fbgemm-gpu
       version: 0.3.2
     - tags: get,generic-python-lib,_onnx-graphsurgeon
+    - tags: get,generic-python-lib,_package.scikit-learn
 
   dlrm-v2-99:
     group: model
