Fixes for intel-gptj
Former-commit-id: e5f77f680875ef057c763dbe9bdec30e83a8553c

--- a/cm-mlops/script/reproduce-mlperf-inference-intel/_cm.yaml
+++ b/cm-mlops/script/reproduce-mlperf-inference-intel/_cm.yaml
@@ -295,9 +295,11 @@ variations:
       - tags: get,generic-python-lib,_package.datasets
         names:
           - pip-package
+          - datasets
       - tags: get,generic-python-lib,_package.accelerate
         names:
           - pip-package
+          - accelerate
 
   gptj-99:
     group: model
