--- a/cm-mlops/script/reproduce-mlperf-inference-intel/_cm.yaml
+++ b/cm-mlops/script/reproduce-mlperf-inference-intel/_cm.yaml
@@ -38,6 +38,8 @@ default_env:
 
 env:
   CM_CALL_MLPERF_RUNNER: 'no'
+  CUDA_VISIBLE_DEVICES: ''
+  USE_CUDA: '0'
 
 # Map script inputs to environment variables
 input_mapping:
