improving gui to reproduce benchmarks
Former-commit-id: 71952f6bcce71bb03b212110c802dc75656f8023

--- a/cm-mlops/cfg/benchmark-run-loadgen-python-dev/any-model-offline.yaml
+++ b/cm-mlops/cfg/benchmark-run-loadgen-python-dev/any-model-offline.yaml
@@ -2,6 +2,4 @@ uid: db45dcd686854602
 
 name: "Any model - offline"
 
-supported_compute:
-- cdfd424c32734e38
-- 357a972e79614903
+compute_uid: cdfd424c32734e38
