--- a/cm-mlops/cfg/benchmark-run-mlperf-inference-v3.1/bert-qaic-offline.yaml
+++ b/cm-mlops/cfg/benchmark-run-mlperf-inference-v3.1/bert-qaic-offline.yaml
@@ -8,3 +8,7 @@ input:
   model: bert
   implementation: qaic
   framework: qaic
+
+functional: true
+
+notes: "<a href=\"https://google.com\">Notes</a>"
