Support version dump
Former-commit-id: 70c581dff34d1b7d4876fa3e2a4a1594482772c4

--- a/cm-mlops/script/run-mlperf-inference-app/_cm.yaml
+++ b/cm-mlops/script/run-mlperf-inference-app/_cm.yaml
@@ -44,6 +44,7 @@ input_mapping:
   debug: CM_DEBUG_SCRIPT_BENCHMARK_PROGRAM
   device: CM_MLPERF_DEVICE
   division: CM_MLPERF_SUBMISSION_DIVISION
+  dump_version_info: CM_DUMP_VERSION_INFO
   execution_mode: CM_MLPERF_EXECUTION_MODE
   find_performance: CM_MLPERF_FIND_PERFORMANCE_MODE
   gpu_name: CM_NVIDIA_GPU_NAME
