Added script to dump mlperf-run-state, use cache for mlperf results, version info cleanups
Former-commit-id: 5f82985481ba1e296c43b57a0eb36b7a4898a853

--- a/cm-mlops/script/app-mlperf-inference-cpp/_cm.yaml
+++ b/cm-mlops/script/app-mlperf-inference-cpp/_cm.yaml
@@ -151,6 +151,9 @@ post_deps:
       CM_MLPERF_SKIP_RUN:
         - "yes"
 
+  - tags: save,mlperf,inference,state
+    names:
+      - save-mlperf-inference-state
 
 # Variations to customize dependencies
 variations:
