--- a/cm-mlops/script/reproduce-mlperf-inference-intel/_cm.yaml
+++ b/cm-mlops/script/reproduce-mlperf-inference-intel/_cm.yaml
@@ -160,6 +160,9 @@ post_deps:
         - run_harness
     tags: benchmark-mlperf
 
+  - tags: save,mlperf,inference,state
+    names:
+      - save-mlperf-inference-state
 
 # Variations to customize dependencies
 variations:
