--- a/cm-mlops/script/reproduce-mlperf-inference-nvidia/_cm.yaml
+++ b/cm-mlops/script/reproduce-mlperf-inference-nvidia/_cm.yaml
@@ -291,7 +291,9 @@ post_deps:
     enable_if_env:
       CM_CALL_MLPERF_RUNNER:
         - yes
-
+  - tags: save,mlperf,inference,state
+    names:
+      - save-mlperf-inference-state
 
 # Variations to customize dependencies
 variations:
